# zendev

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  _typos.toml  justfile  prek.toml  pyproject.toml
.github/: pull_request_template.md  renovate.json
.github/actions/validate-title/: action.yml  validate.py
.github/workflows/: cd-release.yml  ci-check-pr-title.yml  ci-codeql.yml  ci-pr-checks.yml  ci-static-checks.yml  ci-tests.yml
actions/validate-body/: action.yml
actions/validate-checklist/: action.yml
actions/validate-title/: action.yml
src/zendev/: __init__.py  body.py  checklist.py  commit.py  cz.py  log.py  title.py
tests/: test_body_cli.py  test_checklist.py  test_commit.py  test_cz.py  test_log.py  test_title_cli.py  test_validate_title_action.py
