[project]
name = "zendev"
version = "0.0.1"
description = "Personal dev workflow toolkit: unified logging + emoji commit conventions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "loguru>=0.7",
  "commitizen>=4.0",
]

[project.entry-points."commitizen.plugin"]
cz_zendev = "zendev.cz:ZendevCz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zendev"]

[dependency-groups]
dev = [
  { include-group = "check" },
  { include-group = "test" },
]
check = [
  "pyright>=1.1",
]
test = [
  "pytest>=8.0",
]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "FA", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["zendev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
