[project]
name = "zendev"
description = "Personal dev workflow toolkit: unified logging + emoji commit conventions"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "loguru>=0.7",
  "questionary>=2.1",
]
dynamic = ["version"]

[project.scripts]
zendev-commit = "zendev.commit:main"
zendev-commit-msg = "zendev.commit:hook_main"
zendev-validate-title = "zendev.title:main"
zendev-validate-body = "zendev.body:main"

[dependency-groups]
dev = [
  { include-group = "check" },
  { include-group = "test" },
]
check = [
  "pyright>=1.1",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["zendev"]
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "\\.\\.\\.",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.hatch.build.hooks.vcs]
version-file = "src/zendev/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zendev"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.pytest]
addopts = ["--strict-markers", "--tb=short"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",  # flake8-comprehensions
  "FA",  # flake8-future-annotations
  "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["zendev"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
default-groups = ["check", "test"]
